--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Jorge García Torralba",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^4.5.2",
     "express": "^4.17.1"
   }
 }
