--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Jorge García Torralba",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "bootstrap": "^4.5.2",
     "express": "^4.17.1",
     "helmet": "^4.1.1",
