--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "bootstrap": "^4.5.2",
+    "csurf": "^1.11.0",
     "express": "^4.17.1",
     "helmet": "^4.1.1",
     "mysql": "^2.18.1"
