--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "csurf": "^1.11.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-mysql-session": "^2.1.4",
     "helmet": "^4.1.1",
     "mysql": "^2.18.1",
     "passport-local": "^1.0.0"
