Added scripts 'start' and 'dev' in 'package.json'

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./src/app.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./src/app.js",
+    "dev": "npx nodemon"
   },
   "keywords": [],
   "author": "Jorge García Torralba",
