--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "start": "node ./src/app.js",
-    "dev": "npx nodemon"
+    "dev": "npx nodemon",
+    "create-db": "node ./src/seed/db_creation.js"
   },
   "keywords": [],
   "author": "Jorge García Torralba",
