--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-ejs-layouts": "^2.5.0",
     "express-mysql-session": "^2.1.4",
     "helmet": "^4.1.1",
+    "jquery": "^3.5.1",
     "mysql": "^2.18.1",
     "passport-local": "^1.0.0",
     "pug": "^3.0.0"
