--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "helmet": "^4.1.1",
     "jquery": "^3.5.1",
     "mysql": "^2.18.1",
+    "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pug": "^3.0.0"
   },
